@@ -5,7 +5,7 @@ LABEL email="os@jetbrains.com"
 
 RUN apk --no-cache add curl fontconfig ttf-dejavu
 
-RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6765.jar
+RUN curl -o jbr.jar -L https://download.jetbrains.com/biolabs/jbr_browser/jar/jbr-2.0.6781.jar
 
 # JBR sessions should be located here
 RUN set -e && mkdir /jbr_sessions
@@ -19,7 +19,6 @@ EXPOSE 5000
 
 # JBR in server mode
 ENTRYPOINT exec java -Xmx3G --add-modules=jdk.incubator.vector \
-     -Djdk.attach.allowAttachSelf -Djol.magicFieldOffset=true -XX:+EnableDynamicAgentLoading \
      -ea -XX:+UseCompressedOops \
      -XX:+HeapDumpOnOutOfMemoryError \
      -XX:ErrorFile=/jbr_logs/jbr_java_error%p.log \
